# CS-Notes

./: .gitignore
DatabaseSystem/Experiments/Experiment_03/Description/: Description.docx
DatabaseSystem/Experiments/Experiment_03/Report/: Report.sql  Report.tex
DatabaseSystem/Experiments/Experiment_04/: Description.docx  Report.tex
DatabaseSystem/Experiments/Experiment_04/Description/: Student.csv  Template.xls
DatabaseSystem/Experiments/Experiment_04/Files/: StudentScoreTable.txt  SunistTest_ClassInfoTable.csv  SunistTest_ClassInfoTable.tsv  SunistTest_StudentScoreTable.xlsx
DatabaseSystem/Experiments/Experiment_04/Report/: Report.sql  Report.tex
DatabaseSystem/Experiments/Experiment_05/Description/: Description.docx
OperatingSystem/Experiments/Experiment_03/Description/: Description.docx
OperatingSystem/Product/: CMakeLists.txt  Readme.md  main.cpp
OperatingSystem/Product/core/: Readme.drawio
OperatingSystem/Product/core/device/: device_controller.cpp  device_controller.h
OperatingSystem/Product/core/interface/: ImessageProcessor.h
OperatingSystem/Product/core/memory/: memory_controller.cpp  memory_controller.h  process_memory_controller.cpp  process_memory_controller.h
OperatingSystem/Product/core/messagequeue/: message.h
OperatingSystem/Product/core/process/: process.cpp  process.h  processControlBolck.cpp  processControlBolck.h  processStruct.cpp  processStruct.h  process_controller.cpp  process_controller.h
OperatingSystem/Product/libs/: page.cpp  page.h  replacementController.cpp  replacementController.h
OperatingSystem/Product/libs/datastructures/template/: readme.md  t_algorithm.hpp  t_array.hpp  t_blocked_list.hpp  t_datatable.hpp  t_hash_map.hpp  t_list.hpp  t_rb_tree.hpp
OperatingSystem/Product/libs/utils/: argument_generator.cpp  argument_generator.h  argument_parser.cpp  argument_parser.h
OperatingSystem/Product/libs/utils/fileoperator/: md5.cpp  md5.h
OperatingSystem/Product/libs/utils/input/: loader.cpp  loader.h
OperatingSystem/Product/libs/utils/input/model/: csv_file.cpp  csv_file.h
OperatingSystem/Product/libs/utils/output/: argument_generator.cpp  argument_generator.h  argument_parser.cpp  argument_parser.h  displayer.cpp  displayer.h
OperatingSystem/Product/libs/utils/output/model/: error.cpp  error.h
OperatingSystem/Product/middleware/: basicService.cpp  basicService.h  messageQueue.cpp  messageQueue.h  moudleSwitcher.cpp  moudleSwitcher.h
OperatingSystem/Product/tests/experiment_01/: __experiment_01_main.cpp
OperatingSystem/Product/tests/experiment_02/: __experiment_02_main.cpp
OperatingSystem/Product/tests/experiment_03/: __experiment_03_main.cpp
OperatingSystem/Product/tools/: argumentParser.cpp  argumentParser.h  csvParser.cpp  csvParser.h  errorParser.cpp  errorParser.h
(+1 files in other folders)
